--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ img{
         background: white;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
+        grid-template-rows: 670px;
     }
         .header-grid{
             padding: 0;
@@ -209,6 +209,7 @@ img{
             .centralizadorFlex-menu-header{
                 display: flex;
                 align-items: center;
+                justify-content: space-between;
                 /* background: rgba(255, 0, 0, 0.349); */
             }
             .header-grid a.tlogo{               /*CONFIGURAÇÃO DA LOGO*/
@@ -221,13 +222,16 @@ img{
             }
 
         section.section-main section.section1 div.slide1{
-            max-width: 100%;
+            width: 100%;
+            height: 670px;
             margin: auto;
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             grid-template-rows: 1fr auto 0.2fr 0.1fr;
             grid-column: 1;
             grid-row: 1;
+            background: rgba(255, 0, 0, 0.308);
+            overflow: hidden;
         }
             .slide-itens{
                 grid-row: 1 / -1;
@@ -237,10 +241,12 @@ img{
                 display: grid;
             }
                 .slide-itens > *{
+                    width: 100%;
                     opacity: 0;
                     position: absolute;
-                    top: 0px;
-                    pointer-events: none;
+                    top: 0;
+                    margin: auto;
+                    /* pointer-events: none; */
                 }
                 .slide-itens > .active{
                     opacity: 1;
@@ -350,13 +356,13 @@ img{
         margin-bottom: 65px;
         display: grid;
         grid-template-columns: 350px 1fr;
-        grid-template-rows: 1fr;
+        grid-template-rows: auto;
     }
-                        .area-text{
+    section.section-main section.section2 .area-text{
                             background: white;
                             display: grid;
                         }
-                                .area-text .text-section2{
+                        section.section-main section.section2 .area-text .text-section2{
                                     background: white;
                                     height: 100px;
                                     width: 100%;
@@ -365,6 +371,18 @@ img{
                                     align-items: center;
                                     position: sticky;
                                     top: 45%;
+                                }
+                                div.text-section2{
+                                    display: inline-block;
+                                    background: rgba(173, 216, 230, 0);
+                                    width: 100%;
+                                    padding: 0;
+                                    margin: 0;
+                                    text-align: center;
+                                }
+                                div.text-section2 a{
+                                    color: black;
+                                    height: 20px;
                                 }
                                     .area-text a.TituloNav-section2{
                                         font-size: 1.2em;
@@ -377,23 +395,28 @@ img{
                                         grid-row: 2;
                                     }
                         .area-slide2{
-                            background: white;
-                            position: relative;
-                            display: grid;
-                            margin: 1fr 1fr;
+                            /* border: 2px solid black; */
+                            max-width: auto;
+                            height: auto;
+                            overflow: hidden;
                         }
-                        div.text-section2{
-                            display: inline-block;
-                            background: rgba(173, 216, 230, 0);
-                            width: 100%;
-                            padding: 0;
-                            margin: 0;
-                            text-align: center;
-                        }
-                        div.text-section2 a{
-                            color: black;
-                            height: 20px;
-                        }
+                            .area-slide2 .slide2-itens{
+                                display: flex;
+                                animation-name: translacao;
+                                animation-duration: 80s;
+                                animation-timing-function: linear;
+                                animation-iteration-count: infinite;
+                            }
+                                @keyframes translacao {
+                                    to{
+                                        transform: translateX(-3610px);
+                                    }
+                                }
+                                .area-slide2 .slide2-itens img{
+                                    margin-right: 5px;
+                                    max-width: 100%;
+                                    display: block;
+                                }
     section.section3{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -664,57 +687,4 @@ img{
 .menuzinho-section1 h1{
     color: black;
     grid-row: 3;
-}
-
-/* CONFIGURAÇÃO DO PRIMEIRO SLIDE 2 */
-.slide2-itens{
-    grid-area: 1/1;
-}
-.slide2-nav{
-    grid-area: 1/1;
-    z-index: 1;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 1fr;
-}
-.slide2-nav button{
-    opacity: 0;
-}
-.slide2-itens > *{
-    position: absolute;
-    top: 0;
-    opacity: 0;
-    pointer-events: none;
-}
-.slide2-itens > .active2{
-    position: relative;
-    opacity: 1;
-    pointer-events: initial;
-}
-.slide2-thumb{
-    display: flex;
-    grid-column: 1/3;
-}
-.slide2-thumb > span{
-    flex: 1;
-    display: block;
-    height: 10px;
-    background: rgba(153, 144, 142, 0);
-    margin: 5px;
-    border-radius: 3px;
-    overflow: hidden;
-}
-.slide2-thumb > span.active2::after{
-    content: '';
-    display: block;
-    height: inherit;
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 3px;
-    transform: translateX(-100%);
-    animation: thumb2 5s forwards linear;
-}
-@keyframes thumb2{
-    to{
-        transform: initial;
-    }
 }
