--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     font-family: 'FermowGeral', Times, serif;
     text-decoration: none;
     text-transform: uppercase;
-    outline: #2daebf dashed 1px;
+    /* outline: #2daebf dashed 1px; */
 }
 img{
     width: 100%;
@@ -232,7 +232,7 @@ img{
             grid-template-rows: 1fr auto 0.2fr 0.1fr;
             grid-column: 1;
             grid-row: 1;
-            background: rgba(255, 0, 0, 0.308);
+            /* background: rgba(255, 0, 0, 0.308); */
             overflow: hidden;
         }
             .slide-itens{
