--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ img{
             grid-template-rows: 1fr auto 0.2fr 0.1fr;
             grid-column: 1;
             grid-row: 1;
-            /* background: rgba(255, 0, 0, 0.308); */
+            background: rgb(255, 0, 0);
             overflow: hidden;
         }
             .slide-itens{
