--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    border: 0;
     list-style: none;
     font-size: 0.8rem;
     font-family: 'FermowGeral', Times, serif;
@@ -8,11 +9,6 @@
     text-transform: uppercase;
     /* outline: #2daebf dashed 1px; */
 }
-img{
-    width: 100%;
-    display: block;
-}
-
 @font-face {
     font-family: "Fermow";
     src: url("../fonts/the_braggest/The Braggest_Demo.otf") format('opentype'), url("../fonts/the_braggest/The Braggest_Demo.ttf") format('truetype');
@@ -42,138 +38,11 @@ img{
     grid-template-columns: auto;
     grid-template-rows: auto auto;
 }
-/*-------------------------------------------------------------------------------------
-//////////////////      HEADER      \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
---------------------------------------------------------------------------------------*/
-
-
-        
-/* ////////////////////////////////////////////////////////////////  MENU1  /////////////////////*/
-        .header-grid nav ul.menu1{
-            display: flex;
-            flex-wrap: wrap;
-            /* background: rgba(0, 128, 0, 0.575); */
-            margin-left: 30px;
-        }
-/*--------------------------------------------------------*/
-                .header-grid nav ul.menu1 li + li{
-                    margin-left: 20px;
-                }
-.header-grid nav ul.menu1 li{
-    /* background: rgba(255, 255, 0, 0.404); */
-}
-/*--------------------------------------------------------*/
-                .header-grid nav ul.menu1 li a{
-                    display: block;
-                    padding: 5px;
-                    color: white;
-                    font-size: 0.9em;
-                    font-family: "FermowGeral", Times, serif;
-                    border-bottom: 2px solid rgba(0, 0, 0, 0);
-                    transition: 0.5s;
-                    /* background: rgba(9, 0, 128, 0.527); */
-                }
-                                .header-grid nav ul.menu1 li a:hover{
-                                    border-bottom: 2px solid black;
-                                }
-
-                /*/////////CONFIGURAÇÃO DO SUBITEM DO MENU\\\\\\\\*/
-                .header-grid nav ul.menu1 li ul{
-                    position: absolute;
-                    background-color: rgba(255, 255, 255, 0);
-                    display: none;
-                    /* background: rgba(128, 0, 85, 0.404); */
-                }
-                            .header-grid .centralizador-menu-header nav ul.menu1 li:hover ul{
-                                display: block;
-                                transition: 2s;
-                            }
-                .header-grid nav ul.menu1 li ul li{
-                    display: block;
-                    width: 150px;
-                    margin: 0px;
-                }
-                .header-grid nav ul.menu1 li ul li a{
-                    font-family: "FermowGeralPrincipal", Times, serif;
-                    text-transform: capitalize;
-                    font-size: 1em;
-                    color: rgba(255, 255, 255, 0);
-                    border-bottom: none;
-                    transition: none;
-                }
-                            .header-grid nav ul.menu1 li ul li a:hover{
-                                color: rgba(0, 0, 0, 0.7);
-                                border-bottom: none;
-                                transition: none;
-                            }
-
-/* ////////////////////////////////////////////////////////////////  MENU2  /////////////////////*/
-        .header-grid nav ul.menu2{
-            display: flex;
-            flex-wrap: wrap;
-            /* background: rgba(128, 0, 0, 0.575); */
-            margin-left: 80px;
-        }
-/*--------------------------------------------------------*/
-                .header-grid nav ul.menu2 li + li{
-                    margin-left: 35px;
-                }
-.header-grid nav ul.menu2 li{
-    /* background: rgba(255, 255, 0, 0.404); */
-}
-/*--------------------------------------------------------*/
-            .header-grid nav ul.menu2 li a{
-                display: block;
-                padding: 5px;
-                color: white;
-                font-size: 1em;
-                /* background: rgba(255, 255, 0, 0.486); */
-            }
-            /*/////////CONFIGURAÇÃO DO SUBITEM DO MENU\\\\\\\\*/
-            .header-grid nav ul.menu2 li ul{
-                position: absolute;
-                background-color: rgba(51, 51, 51, 0);
-                display: none;
-                /* background: rgba(119, 128, 0, 0.301); */
-
-            }
-                            .header-grid nav ul.menu2 li:hover ul{
-                                display: block;
-                            }
-                            .header-grid nav ul.menu2 li ul a{
-                                display: none;
-                            }
-            .header-grid nav ul.menu2 li ul li input{
-
-                display: none;
-
-                margin-top: 15px;
-                width: 230px;
-                text-transform: capitalize;
-                font-family: 'FermowGeralPrincipal', Times, serif;
-                font-size: 1em;
-                border: none;
-                border-bottom: 1px solid rgb(0, 0, 0);
-                background: rgba(0  , 0, 0, 0);
-                color: black;
-                padding: 0px 0px 15px 0px;
-            }
-
-/*-------------------------------------------------------------------------------------
-//////////////////      SECTION      \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
---------------------------------------------------------------------------------------*/
-.section-main{/*SECTION*/
-    background: white;
-    display: grid;
-    grid-auto-columns: 100vw;
-    grid-template-rows: 100vh 100vh 100vh 100vh;
-}
-    section.section-main section.section1{
-        margin-bottom: 5px;
+    .section-main{/*SECTION*/
         background: white;
         display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 670px;
+        grid-auto-columns: 100vw;
+        grid-template-rows: 100vh 100vh 100vh 100vh;
     }
         .header-grid{
             width: 100vw;
@@ -222,17 +91,132 @@ img{
                 text-transform: capitalize;
                 /* background: rgba(255, 0, 0, 0.452); */
             }
+/* ////////////////////////////////////////////////////////////////  MENU1  /////////////////////*/
+.header-grid nav ul.menu1{
+    display: flex;
+    flex-wrap: wrap;
+    /* background: rgba(0, 128, 0, 0.575); */
+    margin-left: 30px;
+}
+/*--------------------------------------------------------*/
+        .header-grid nav ul.menu1 li + li{
+            margin-left: 20px;
+        }
+.header-grid nav ul.menu1 li{
+background: none;
+}
+/*--------------------------------------------------------*/
+        .header-grid nav ul.menu1 li a{
+            display: block;
+            padding: 5px;
+            color: white;
+            font-size: 0.9em;
+            font-family: "FermowGeral", Times, serif;
+            border-bottom: 2px solid rgba(0, 0, 0, 0);
+            transition: 0.5s;
+            /* background: rgba(9, 0, 128, 0.527); */
+        }
+                        .header-grid nav ul.menu1 li a:hover{
+                            border-bottom: 2px solid black;
+                        }
 
+        /*/////////CONFIGURAÇÃO DO SUBITEM DO MENU\\\\\\\\*/
+        .header-grid nav ul.menu1 li ul{
+            position: absolute;
+            background-color: rgba(255, 255, 255, 0);
+            display: none;
+            /* background: rgba(128, 0, 85, 0.404); */
+        }
+                    .header-grid .centralizador-menu-header nav ul.menu1 li:hover ul{
+                        display: block;
+                        transition: 2s;
+                    }
+        .header-grid nav ul.menu1 li ul li{
+            display: block;
+            width: 150px;
+            margin: 0px;
+        }
+        .header-grid nav ul.menu1 li ul li a{
+            font-family: "FermowGeralPrincipal", Times, serif;
+            text-transform: capitalize;
+            font-size: 1em;
+            color: rgba(255, 255, 255, 0);
+            border-bottom: none;
+            transition: none;
+        }
+                    .header-grid nav ul.menu1 li ul li a:hover{
+                        color: rgba(0, 0, 0, 0.7);
+                        border-bottom: none;
+                        transition: none;
+                    }
+
+/* ////////////////////////////////////////////////////////////////  MENU2  /////////////////////*/
+.header-grid nav ul.menu2{
+    display: flex;
+    flex-wrap: wrap;
+    /* background: rgba(128, 0, 0, 0.575); */
+    margin-left: 80px;
+}
+/*--------------------------------------------------------*/
+        .header-grid nav ul.menu2 li + li{
+            margin-left: 35px;
+        }
+.header-grid nav ul.menu2 li{
+background: none;
+}
+/*--------------------------------------------------------*/
+    .header-grid nav ul.menu2 li a{
+        display: block;
+        padding: 5px;
+        color: white;
+        font-size: 1em;
+        /* background: rgba(255, 255, 0, 0.486); */
+    }
+    /*/////////CONFIGURAÇÃO DO SUBITEM DO MENU\\\\\\\\*/
+    .header-grid nav ul.menu2 li ul{
+        position: absolute;
+        background-color: rgba(51, 51, 51, 0);
+        display: none;
+        /* background: rgba(119, 128, 0, 0.301); */
+
+    }
+                    .header-grid nav ul.menu2 li:hover ul{
+                        display: block;
+                    }
+                    .header-grid nav ul.menu2 li ul a{
+                        display: none;
+                    }
+    .header-grid nav ul.menu2 li ul li input{
+
+        display: none;
+
+        margin-top: 15px;
+        width: 230px;
+        text-transform: capitalize;
+        font-family: 'FermowGeralPrincipal', Times, serif;
+        font-size: 1em;
+        border: none;
+        border-bottom: 1px solid rgb(0, 0, 0);
+        background: rgba(0  , 0, 0, 0);
+        color: black;
+        padding: 0px 0px 15px 0px;
+    }
+    section.section-main section.section1{
+        margin-bottom: 5px;
+        background: white;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 670px;
+    }
         section.section-main section.section1 div.slide1{
             width: 100vw;
             height: 100vh;
-            margin: auto;
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             grid-template-rows: 1fr auto 0.2fr 0.1fr;
             grid-column: 1;
             grid-row: 1;
-            background: rgb(255, 0, 0);
+            /* background: rgb(255, 0, 0); */
             overflow: hidden;
         }
             .slide-itens{
@@ -399,7 +383,7 @@ img{
                                     }
                         .area-slide2{
                             /* border: 2px solid black; */
-                            max-width: auto;
+                            width: auto;
                             height: auto;
                             overflow: hidden;
                         }
@@ -420,6 +404,7 @@ img{
                                     width: 100vw;
                                     height: 100vh;
                                     display: block;
+                                    transform: translateY(-10%);
                                 }
     section.section3{
         display: grid;
